iss(app): Move allowed hosts to env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 SECRET_KEY='s3cr3t-vaslue-from-dotenv'
 DEBUG=True
 DATABASE_URL=postgres://dbuser:dbpass@localhost:5432/mydb
+ALLOWED_HOSTS=192.168.88.53,0.0.0.0
