--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,16 @@
     "@nuxt/scripts": "^0.11.8",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxt/ui": "^3.2.0",
+    "@pinia/nuxt": "^0.11.2",
     "@unhead/vue": "^2.0.11",
     "better-sqlite3": "^11.10.0",
     "eslint": "^9.30.1",
     "nuxt": "^3.17.6",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify-nuxt-module": "^0.18.7"
   }
 }
