--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -10,24 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^3.6.1",
-    "@nuxt/eslint": "^1.5.0",
-    "@nuxt/fonts": "^0.11.4",
-    "@nuxt/icon": "^1.15.0",
-    "@nuxt/image": "^1.10.0",
-    "@nuxt/scripts": "^0.11.8",
+    "@nuxt/eslint": "^1.9.0",
+    "@nuxt/image": "^1.11.0",
+    "@nuxt/scripts": "^0.11.10",
     "@nuxt/test-utils": "^3.19.2",
-    "@nuxt/ui": "^3.2.0",
+    "@nuxt/ui": "^3.3.2",
     "@pinia/nuxt": "^0.11.2",
-    "@unhead/vue": "^2.0.11",
-    "better-sqlite3": "^11.10.0",
-    "eslint": "^9.30.1",
-    "nuxt": "^3.17.6",
+    "@unhead/vue": "^2.0.14",
+    "eslint": "^9.33.0",
+    "nuxt": "^4.0.3",
     "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "^4.4.1",
-    "typescript": "^5.8.3",
-    "vue": "^3.5.17",
-    "vue-router": "^4.5.1",
-    "vuetify-nuxt-module": "^0.18.7"
+    "pinia-plugin-persistedstate": "^4.5.0",
+    "typescript": "^5.9.2",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   }
 }
