--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "typescript": "^5.9.2",
+    "valibot": "^1.1.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   }
